# Medwise-Rag

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  main.py  pyproject.toml
.dvc/: config
.github/workflows/: ci.yaml
configs/: base.yaml
configs/experiments/: exp_01.yaml  exp_02.yaml  exp_03.yaml  exp_04.yaml  exp_05.yaml  exp_06.yaml  exp_07.yaml  exp_08.yaml  exp_09.yaml  exp_10.yaml
data/: .gitignore  data_processed.dvc  data_raw.dvc  vectorstore.dvc
data/eval/: questions.json
frontend/: app.py
src/api/: main.py
src/core/: config.py  logging_config.py
src/evaluation/: config.py  metrics.py  run_all_experiments.py
src/ingestion/: chunking.py  embeddings.py  run_embeddings.py  run_ingestion.py
src/ingestion/cleaning/: text_cleaner.py
src/ingestion/loaders/: pdf_loader.py
src/rag/: chain.py
src/retrieval/: retriever.py  run_retrieval.py
src/tests/: test_evaluation_metrics.py  test_health.py  test_ingestion.py  test_rag.py  test_retrieval.py
